snapshots/syntax/library/functions/math/cos/cos_circle_calculation.snap
---
source: src/syntax/library/functions/math/cos.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: centerX
            - kind: Whitespace
              text: " "
            - kind: AdditionOperator
              text: +
            - kind: Whitespace
              text: " "
            - kind: BinaryExpression
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: radius
                - kind: Whitespace
                  text: " "
                - kind: MultiplicationOperator
                  text: "*"
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Cos
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: angle
                    - kind: RightParenthesis
                      text: )
        - kind: Newline
          text: "\n"
